--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "transaction-api": "file:"
+    "transaction-api": "file:",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
